--- a/roles/iterm2-shell-integration/tasks/main.yml
+++ b/roles/iterm2-shell-integration/tasks/main.yml
@@ -1,22 +1,23 @@
 # Enables iterm2 Shell Integration: https://iterm2.com/documentation-shell-integration.html
 ---
 - name: Check if iTerm2 shell integration files exist
-  find:
+  ansible.builtin.find:
     hidden: true
     paths: "{{ ansible_env.HOME }}"
     patterns: ".iterm2_shell_integration*"
   register: iterm2_integration_files
 
 - name: Set register variable if iTerm2 shell integration files exist
-  set_fact:
+  ansible.builtin.set_fact:
     iterm2_integration_exists: "{{ iterm2_integration_files.matched }}"
 
 - name: Download iTerm2 shell integration script
-  get_url:
+  ansible.builtin.get_url:
     url: "https://iterm2.com/misc/install_shell_integration.sh"
     dest: "{{ ansible_env.HOME }}/"
+    mode: '0755'
   when: not iterm2_integration_exists
 
 - name: Run iTerm2 shell integration script
-  command: "{{ ansible_shell_executable }} {{ ansible_env.HOME }}/install_shell_integration.sh"
+  ansible.builtin.command: "{{ ansible_shell_executable }} {{ ansible_env.HOME }}/install_shell_integration.sh"
   when: not iterm2_integration_exists
