--- a/roles/brew-cask/tasks/main.yml
+++ b/roles/brew-cask/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # brew list --cask -1
-- name: install brew casks
+- name: Install brew casks
   community.general.homebrew_cask:
     name: "{{ item }}"
   with_items:
