git: make emerge great again

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,7 +17,7 @@
 	cp = cherry-pick
 	dc = diff --cached
 	desc = commit --allow-empty
-	emerge = !git amend -n && git pushm -f
+	emerge = !git add -A . && git amend -n && git pushm -f
 	exec = !exec
 	nb = checkout -b
 	pullm = !git pull $(git remote) $(git branch --show-current):$(git branch --show-current)
