--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -3,7 +3,9 @@
   hosts: all
   roles:
     - role: elliotweiser.osx-command-line-tools
-    - role: macos
+    # keep-sorted start
     - role: brew
     - role: brew_cask
     - role: iterm2_shell_integration
+    - role: macos
+    # keep-sorted end
