--- a/requirements.yml
+++ b/requirements.yml
@@ -5,7 +5,11 @@
 # Install:
 #   ansible-galaxy collection install ansible.posix
 collections:
+  # keep-sorted start
   - name: ansible.posix
   - name: community.general
+  # keep-sorted end
 roles:
+  # keep-sorted start
   - name: elliotweiser.osx-command-line-tools
+  # keep-sorted end
