--- a/roles/iterm2_shell_integration/tasks/main.yml
+++ b/roles/iterm2_shell_integration/tasks/main.yml
@@ -11,7 +11,7 @@
   ansible.builtin.set_fact:
     iterm2_integration_exists: "{{ iterm2_integration_files.matched }}"
 
-- name: Download iTerm2 shell integration script
+- name: Download and install iTerm2 shell integration script
   ansible.builtin.get_url:
     url: "https://iterm2.com/misc/install_shell_integration.sh"
     dest: "{{ ansible_env.HOME }}/"
