use 1password ssh-agent when available

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -11,6 +11,11 @@ Host *
 	# default lifetime, as if by ssh-add(1).
 	AddKeysToAgent yes
 
+	# Use 1Password SSH agent when available
+	# macOS only
+	# Linux: "~/.1password/agent.sock"
+	IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
+
 	# This is a macOS only option that looks for passwords for the keys
 	# in the keychain. Ignore if it is an unknown option.
 	# https://apple.stackexchange.com/q/48502/150911
