--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,7 +19,7 @@
 	desc = commit --allow-empty
 	emerge = !git add -A . && git amend -n && git pushm -f
 	exec = !exec
-	nb = checkout -b
+	nb = switch --create
 	pullm = !git pull $(git remote | head -1) $(git branch --show-current):$(git branch --show-current)
 	pushm = !git push $(git remote | head -1) $(git branch --show-current):$(git branch --show-current)
 	rb = branch -m
