--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,7 +32,7 @@
 	# keep-sorted end
 
 	# usage: git ignore go,hugo,vim >> .gitignore
-	ignore = !curl -L -s https://www.gitignore.io/api/$@
+	ignore = !curl -L -s "https://www.gitignore.io/api/$@"
 
 	# log: there's also gitk and tig
 	l = log --graph --pretty=oneline --abbrev-commit --all
