ssh workaround for ghostty

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -41,6 +41,9 @@ Host *
 	# Manually for pre-existing keys: ssh-keygen -H
 	HashKnownHosts yes
 
+	# https://ghostty.org/docs/help/terminfo
+	SetEnv TERM=xterm-256color
+
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
 #
