Revert "remove iterm2"
This reverts commit 7fcf8adffead605b7c86a2381e47ddf728008ec0.

--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -6,5 +6,6 @@
     # keep-sorted start
     - role: brew
     - role: brew_cask
+    - role: iterm2_shell_integration
     - role: macos
     # keep-sorted end
