--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,10 @@ repos:
       - id: sort-simple-yaml
       - id: trailing-whitespace
       # keep-sorted end
+  - repo: https://github.com/rhysd/actionlint/
+    rev: v1.7.4
+    hooks:
+      - id: actionlint
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
     hooks:
