--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,10 @@ repos:
     rev: v0.5.1
     hooks:
       - id: keep-sorted
+  - repo: https://github.com/lalten/check-gha-pinning
+    rev: v1.3.0
+    hooks:
+      - id: check-gha-pinning
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -52,5 +56,5 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
-        exclude: zsh$
+        exclude: \.zsh$
   # keep-sorted end
