--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -148,6 +148,8 @@
 [status]
 	# Show individual files in untracked directories.
 	showUntrackedFiles = all
+	short = true
+	branch = true
 
 [submodule]
 	# Clone new submodules in parallel with as many jobs.
