ranger: sort blog posts by name, most recent first

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -11,5 +11,8 @@ set draw_borders separators
 setlocal path=~/.dotfiles show_hidden true
 setlocal path=~/.dotfiles_corp show_hidden true
 
+# Sort blog posts by most recent
+setlocal path=~/Projects/perrotta.dev/content/posts sort_reverse true
+
 # Edit file: Set 'e' in addition to 'E'.
 map e edit_file
