--- a/.gitmodules
+++ b/.gitmodules
@@ -70,10 +70,6 @@
 	path = vim/.vim/pack/misc/start/vim-mkdir
 	url = https://github.com/pbrisbin/vim-mkdir
 	shallow = true
-[submodule "vim/.vim/pack/misc/start/vim-fetch"]
-	path = vim/.vim/pack/misc/start/vim-fetch
-	url = https://github.com/wsdjeg/vim-fetch
-	shallow = true
 [submodule "vim/.vim/pack/misc/start/vim-highlightedyank"]
 	path = vim/.vim/pack/misc/start/vim-highlightedyank
 	url = https://github.com/machakann/vim-highlightedyank
@@ -113,4 +109,8 @@
 [submodule "vim/.vim/pack/misc/start/vim-sneak"]
 	path = vim/.vim/pack/misc/start/vim-sneak
 	url = https://github.com/justinmk/vim-sneak
+	shallow = true
+[submodule "vim/.vim/pack/misc/start/file-line"]
+	path = vim/.vim/pack/misc/start/file-line
+	url = https://github.com/bogado/file-line
 	shallow = true
