--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,24 @@
 ci:
   submodules: true
 repos:
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      # keep-sorted start
+      - id: check-executables-have-shebangs
+      - id: check-symlinks
+      - id: check-yaml
+      - id: detect-private-key
+      - id: pretty-format-json
+        args:
+          - --autofix
+          - --no-sort-keys
+      - id: trailing-whitespace
+      # keep-sorted end
   # keep-sorted start
   - repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
@@ -33,21 +51,6 @@ repos:
     rev: v1.3.0
     hooks:
       - id: check-gha-pinning
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-      # keep-sorted start
-      - id: check-executables-have-shebangs
-      - id: check-symlinks
-      - id: check-yaml
-      - id: detect-private-key
-      - id: pretty-format-json
-        args:
-          - --autofix
-          - --no-sort-keys
-      - id: sort-simple-yaml
-      - id: trailing-whitespace
-      # keep-sorted end
   - repo: https://github.com/rhysd/actionlint/
     rev: v1.7.5
     hooks:
