--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,12 +14,12 @@
 
 [alias]
 	# keep-sorted start
-	bd = !branch="$(git branch --show-current)" && git checkout $(git default) && git branch -D "${branch:-$1}"
+	bd = !branch="$(git branch --show-current)" && git default && git branch -D "${branch:-$1}"
 	cm = commit
 	co = checkout
 	cp = cherry-pick
 	dc = diff --cached
-	default = !git symbolic-ref --short refs/remotes/origin/HEAD | sed 's@^origin/@@'
+	default = !git checkout master || git checkout main
 	desc = commit --allow-empty -n
 	emerge = !git add -A . && git amend -n && git pushm --force-with-lease
 	empty = desc -n -m "empty"
