ghostty: set theme

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,3 +1,4 @@
 # https://github.com/ghostty-org/ghostty
 cursor-style-blink = false
 shell-integration-features = no-cursor
+theme=catppuccin-macchiato
