--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,8 @@
 # https://github.com/ghostty-org/ghostty
+# keep-sorted start
 cursor-style-blink = false
+macos-icon = chalkboard
+macos-titlebar-style=tabs
 shell-integration-features = no-cursor
 theme=catppuccin-macchiato
+# keep-sorted end
