--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install pre-commit
 
       - name: Run pre-commit autoupdate
-        run: pre-commit autoupdate
+        run: pre-commit autoupdate --freeze --jobs "$(nproc)"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # v7.0.5
