--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -10,5 +10,9 @@ git_xl = git xl "$@"
 [.dotfiles]
 checkout = git clone 'git@github.com:thiagowfx/.dotfiles.git' '.dotfiles'
 
+[.dotfiles_corp]
+checkout = git clone 'git@github.com:thiagowfx/.dotfiles_corp.git' '.dotfiles_corp'
+skip = lazy
+
 [workspace/perrotta.dev]
 checkout = git clone 'git@github.com:thiagowfx/thiagowfx.github.io.git' 'perrotta.dev'
