--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -6,6 +6,7 @@ pull = update
 [DEFAULT]
 git_world = git world "$@"
 git_xl = git xl "$@"
+jobs = 2
 
 [.dotfiles]
 checkout = git clone 'git@github.com:thiagowfx/.dotfiles.git' '.dotfiles'
