--- a/hg/.hgrc
+++ b/hg/.hgrc
@@ -1,5 +1,5 @@
 [ui]
-username = Thiago Perrotta <tbperrotta@gmail.com>
+username = Thiago Perrotta <thiago@perrotta.dev>
 merge = diffconflicts
 
 [alias]
