--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ repos:
     hooks:
       - id: keep-sorted
   - repo: https://github.com/instrumentl/pre-commit-just
-    rev: v0.1
+    rev: 9afb27e76938eca22c92ad1d8a6f4b9e1c29bb6b  # frozen: v0.1
     hooks:
       - id: format-justfile
   - repo: https://github.com/lalten/check-gha-pinning
